--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,18 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- dummy login page -->
+<ion-content class="ion-padding ion-text-center">
 
-<ion-content>
-this page works!
+  <div class="logo">
+    <img src='https://www.graphicsprings.com/filestorage/stencils/f2e14a87e3a9fd5f13f3beeb05b3f6b3.png?width=300&height=300'>
+  </div>
+
+  <ion-item lines="none">
+    <ion-input placeholder='Enter email'></ion-input>
+  </ion-item>
+
+  <ion-item lines="none">
+    <ion-input placeholder='Password' type='password'></ion-input>
+  </ion-item>
+
+  <ion-button color='dark' expand='block'>Login</ion-button>
+  
 </ion-content>
