--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,6 +13,6 @@
     <ion-input placeholder='Password' type='password'></ion-input>
   </ion-item>
 
-  <ion-button color='dark' expand='block'>Login</ion-button>
+  <ion-button color='dark' expand='block'>This is a test</ion-button>
   
 </ion-content>
