--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,16 +4,19 @@
       <div id="ani-login-banner">
       </div>
         <ion-card-content style="padding: 10px">
-        <form style="text-align: center;">
+        <form style="text-align: center;" *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()"
+        #f="ngForm" novalidate>
           <h2 id="ani-title">Anikultura</h2>
           <ion-item lines="full">
             <ion-label position="floating">Username</ion-label>
-            <ion-input type="text" required></ion-input>
+            <ion-input type="text" name="username" [(ngModel)]="form.username" required
+            #username="ngModel"></ion-input>
           </ion-item>
   
           <ion-item lines="full">
             <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" required></ion-input>
+            <ion-input type="password" name="password" [(ngModel)]="form.password" minlength="6"
+            #password="ngModel"required></ion-input>
           </ion-item>
   
           <ion-row>
