--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,6 +10,11 @@
       <ion-icon name="person"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button expand="full" (click)="showConfirm()">
+      <ion-icon name="arrow-redo"></ion-icon>
+      <ion-label>Log out</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
