--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,29 +8,41 @@
 
 <ion-content>
   <div id="ani-wrapper">
-    <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px"> 
+    <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px">
       <ion-card-content style="padding: 10px; text-align: center;">
-        <ion-item>
-          <ion-select style="color: #242424; font-size: 2rem; font-weight: bold">
-            <ion-select-option value="brown" selected>Tibay Community Farm</ion-select-option>
-            <ion-select-option value="blonde">Masagana High School</ion-select-option>
-            <ion-select-option value="black">Marquez Farmland</ion-select-option>
-          </ion-select>
-        </ion-item>
-        <img src="../assets/stages/stage3.png" />
-        <button id="aniButton">Nailipat na ang buto sa lupang tataniman</button>
-        <ion-item-divider></ion-item-divider>
-        <div class="ani-content">
-          <h1 style="font-size:50px;color:#242424">12 araw</h1>
-            <p>Bago mag bunga ang iyong mga pananim</p>
-        </div>
+        <form [formGroup]="farmerReportForm" (submit)="onSubmit(loginBtn)">
+
+          <ion-item>
+            <ion-select type="input" name="farmland" formControlName="farmland"
+              style="color: #242424; font-size: 2rem; font-weight: bold;">
+              <ion-select-option *ngFor="let farmland of farmlands" [value]="farmland.id"
+                style="width: 100% !important;">{{ farmland.name }}
+              </ion-select-option>
+            </ion-select>
+          </ion-item>
+        </form>
+
+        <img [src]="currentSeedStageImagePath" style="padding: 2em;" />
+        <button id="aniButton" (click)="addPhotoToGallery()">
+          Nailipat na ang buto sa lupang tataniman
+        </button>
+        <p>Kailangan kumuha ng litrato bago magsumite ng report</p><br>
       </ion-card-content>
     </ion-card>
   </div>
+
   <div id="ani-wrapper" style="margin-top:-10px">
-    <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;"> 
+    <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;">
       <ion-card-content style="padding: 10px">
-        <h1>Mga ginawa</h1> 
+        <h1>Mga inaasahan</h1>
+        <ion-item-divider style="margin-top: -25px; margin-bottom: 1em; background: rgba(0,0,0,0.0);">
+        </ion-item-divider>
+
+        <div class="ani-content" style="text-align: center; margin-bottom: 2em;">
+          <h1 style="font-size:50px; line-height: 50px; color:#242424">48 - 72 na araw</h1>
+          <p>Bago mamunga ang iyong mga pananim</p>
+        </div>
+
         <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 10px; margin-bottom: 10px">
           <ion-row>
             <ion-col>
@@ -41,26 +53,45 @@
             </ion-col>
             <ion-col style="text-align: right">
               <ion-chip>
-                <ion-icon name="leaf" color="primary"></ion-icon>
-                <ion-label>Kilo ng bunga: 72kg</ion-label>
+                <ion-icon name="speedometer" color="primary"></ion-icon>
+                <ion-label>Inaasahang bunga: 72 kg</ion-label>
               </ion-chip>
             </ion-col>
           </ion-row>
         </ion-grid>
-        <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-          <ion-fab-button (click)="addPhotoToGallery()">
-            <ion-icon name="camera"></ion-icon>
-          </ion-fab-button>
-        </ion-fab>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <div id="ani-wrapper" style="margin-top:-10px">
+    <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;">
+      <ion-card-content style="padding: 10px">
+        <h1>Mga nasumiteng farming report</h1>
         <ion-item-divider style="margin-top: -25px; background: rgba(0,0,0,0.0);"></ion-item-divider><br>
-        <ion-grid style="background-color: #cacaca;border-radius: 50px;padding: 10px; margin-bottom: 10px;
-        width: 95%">
-          <ion-row>
+        <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 20px; margin-bottom: 10px">
+          <ion-row *ngFor="let farmerReport of submittedFarmerReports; let i = index">
             <ion-col style="color:#202020;font-weight: bold;">
-              3. Naitanim ko na ang mga buto
+              <div *ngIf="farmerReport.isVerified; else unverified">
+                <span class="text">
+                  {{ i + 1 }}.
+                  {{ farmerReport.seedStage.name }}
+                  <ion-icon name="checkmark-circle" color="primary"></ion-icon>
+                </span>
+              </div>
+
+              <ng-template #unverified>
+                <span class="text">
+                  {{ i + 1 }}.
+                  {{ farmerReport.seedStage.name }}
+                  <ion-icon title="unverified" name="checkmark-circle-outline" color="primary"></ion-icon>
+                </span>
+              </ng-template>
             </ion-col>
+
             <ion-col style="text-align: right">
-              Februrary 23, 2022<br>5:12AM
+              {{ farmerReport.createdAt | date: 'dd MMM yyyy'}}<br>
+              {{ farmerReport.createdAt | date: 'hh:mm aa'}}
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -68,4 +99,3 @@
     </ion-card>
   </div>
 </ion-content>
-  
