--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,11 +22,18 @@
           </ion-item>
         </form>
 
-        <img [src]="currentSeedStageImagePath" style="padding: 2em;" />
-        <button id="aniButton" (click)="addPhotoToGallery()">
-          Nailipat na ang buto sa lupang tataniman
+        <h1 *ngIf="currentSeedStage" style="padding-top: 1em;">{{ getTranslatedCurrentSeedStageName() }}</h1>
+
+        <img [src]="currentSeedStageImagePath"
+          style="max-height: 320px; padding-left: 2em; padding-right: 2em; padding-bottom: 1em;" />
+
+        <p style="margin-bottom: 0.75em">Ang susunod na hakbang ay</p>
+
+        <button *ngIf="nextSeedStage" id="aniButton" (click)="addPhotoToGallery()">
+          {{ getTranslatedNextSeedStageName() }}
         </button>
-        <p>Kailangan kumuha ng litrato bago magsumite ng report</p><br>
+
+        <p style="margin-bottom: 2em">Kailangan kumuha ng litrato bago magsumite ng report</p>
       </ion-card-content>
     </ion-card>
   </div>
@@ -34,28 +41,28 @@
   <div id="ani-wrapper" style="margin-top:-10px" *ngIf="hasPlantedFarmerReport()">
     <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;">
       <ion-card-content style="padding: 10px">
-        <h1>Mga inaasahan</h1>
+        <h1>Inaasahang...</h1>
         <ion-item-divider style="margin-top: -25px; margin-bottom: 1em; background: rgba(0,0,0,0.0);">
         </ion-item-divider>
 
         <div class="ani-content" style="text-align: center; margin-bottom: 2em;">
           <h1 style="font-size:50px; line-height: 50px; color:#242424">{{ estimatedYieldDayEarliest }} - {{
             estimatedYieldDayLatest }} na araw</h1>
-          <p>Bago mamunga ang iyong mga pananim</p>
+          <p>Ang aabutin bago mamunga ang iyong mga pananim</p>
         </div>
 
         <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 10px; margin-bottom: 10px">
           <ion-row>
             <ion-col>
-              <ion-chip>
+              <ion-chip style="padding: 1.5em">
                 <ion-icon name="cart" color="primary"></ion-icon>
-                <ion-label>Inaasahang kita: {{ estimatedProfit | currency:'PHP'}}</ion-label>
+                <ion-label>Maaaring kitain: <br>{{ estimatedProfit | currency:'PHP '}}</ion-label>
               </ion-chip>
             </ion-col>
             <ion-col style="text-align: right">
-              <ion-chip>
+              <ion-chip style="padding: 1.5em">
                 <ion-icon name="speedometer" color="primary"></ion-icon>
-                <ion-label>Inaasahang bunga: {{ estimatedYieldAmount | number:'1.0':'en-US' }} kg</ion-label>
+                <ion-label>Maaaring bunga: <br>{{ estimatedYieldAmount | number:'1.0':'en-US' }} kg</ion-label>
               </ion-chip>
             </ion-col>
           </ion-row>
@@ -68,7 +75,7 @@
   <div id="ani-wrapper" style="margin-top:-10px">
     <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;">
       <ion-card-content style="padding: 10px">
-        <h1>Mga nasumiteng farming report</h1>
+        <h1>Mga nasumiteng report...</h1>
         <ion-item-divider style="margin-top: -25px; background: rgba(0,0,0,0.0);"></ion-item-divider><br>
         <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 20px; margin-bottom: 10px">
           <ion-row *ngFor="let farmerReport of submittedFarmerReports; let i = index">
