--- a/src/app/tutorial/tutorial.page.scss
+++ b/src/app/tutorial/tutorial.page.scss
@@ -8,17 +8,7 @@ ion-slides {
 
 .ani-tutorial-container{
     width: 100%;
-}
-
-#aniButton {
-    background-color: #45a87e; /* Green */
-    border-radius: 50px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
+    padding: 10px;
 }
 
 .ani-tutorial {
@@ -33,6 +23,23 @@ ion-slides {
             color: #232224;
             font-size: 1.5vw;
         }
+        h2{
+            color: #45a87e;
+            text-align: left;
+            font-size: 3vw;
+        }
+
+        #aniButton {
+            background-color: #45a87e; /* Green */
+            border-radius: 50px;
+            color: white;
+            width: 10vw;
+            height: 6vh;
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: bold;
+        }
     }
 
     @media screen and (max-width: 900px) {
@@ -43,6 +50,24 @@ ion-slides {
         p{
             color: #232224;
             font-size: 2vh;
+            text-align: justify;
+        }
+        h2{
+            color: #45a87e;
+            text-align: left;
+            font-size: 4vh;
+        }
+
+        #aniButton {
+            background-color: #45a87e; /* Green */
+            border-radius: 50px;
+            color: white;
+            width: 15vh;
+            height: 5.5vh;
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: bold;
         }
     }
 }
