--- a/src/app/home/modal/submit-report-modal.page.html
+++ b/src/app/home/modal/submit-report-modal.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content style="border-radius: 50px">
     <div style="padding: 0.5em">
         <h1>Magsumite ng report</h1>
         <ion-item-divider class="divider"></ion-item-divider>
