--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -14,7 +14,7 @@
         <div id="ani-avatar"></div>
         <h1 style="text-align:center">{{ farmer.firstName }} {{ farmer.middleName }} {{ farmer.lastName }}</h1>
         <p style="color: #a5a5a5; font-size: 12px; font-weight: normal;text-align: center; margin-top: -10px">
-          {{ farmer.name }} | Joined at date here
+          {{ farmer.name }} | Sumali nung {{ farmer.profile.joinedAt | date: 'MMMM dd, YYYY' }}
         </p>
         <ion-grid style="padding: 20px; margin-bottom: 10px">
           <ion-row>
@@ -29,13 +29,13 @@
               </ion-chip>
               <ion-chip color="success">
                 <ion-icon name="person-outline"></ion-icon>
-                <ion-label>{{ farmer.profile.gender }}</ion-label>
+                <ion-label>{{ getGender(farmer.profile.gender) }}</ion-label>
               </ion-chip>
             </ion-col>
             <ion-col style="text-align: right">
-              <p style="text-decoration: underline">Affiliated Organization</p>
+              <p style="text-decoration: underline">Kabahaging Organisasyon</p>
               Jacob-Cummings
-              <p style="text-decoration: underline; margin-top: 10px">TESDA Training Joined</p>
+              <p style="text-decoration: underline; margin-top: 10px">Sinalihang TESDA Training</p>
               Bradtake and Sons
             </ion-col>
           </ion-row>
