Updated for deployment

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
   <div id="ani-wrapper">
     <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px">
       <ion-card-content style="padding: 10px; text-align: center;">
-        <form [formGroup]="farmlandSelectionForm" (submit)="onSubmit(loginBtn)">
+        <form [formGroup]="farmlandSelectionForm">
 
           <ion-item>
             <ion-select type="input" name="farmland" formControlName="farmland"
