--- a/src/app/tutorial/tutorial.page.html
+++ b/src/app/tutorial/tutorial.page.html
@@ -2,13 +2,13 @@
     <ion-slides class="ani-tutorial" #slides pager="true" [options]="slideOpts">
         <ion-slide>
             <div class="ani-tutorial-container">
-                <h1>Maligayang pagdating sa <b>Anikultura!</b></h1>
+                <h1 routerLink='/tutorial' translate>tutorial.welcome_text<b routerLink='/tutorial' translate>tutorial.title</b></h1>
                 <p>Pindutin ang 'susunod' o i-swipe ang
                 screen para pumunta sa susunod na pahina.</p>
                 <button id="aniButton" (click)="slides.slideNext()">
                     Susunod
                 </button>
-            </div>      
+            </div>
         </ion-slide>
         <ion-slide>
             <div class="ani-tutorial-container">
@@ -75,7 +75,7 @@
                 <h2>Ano gagawin pagkatapos mag-login?</h2>
                 <img src="../assets/tutorial/farmer-submit-tutorial.png" style="width: 400px"/>
                 <p>Makikita rito ang kulay green na pindutan na nagsisilbing paraan upang magsumite
-                    ng progreso sa pagtatanim. Kapag pinindot ang button ay may inaasahang litrato bago 
+                    ng progreso sa pagtatanim. Kapag pinindot ang button ay may inaasahang litrato bago
                     magpatuloy sa susunod na yugto.
                 </p>
                 <div style="display:flex; justify-content: center;">
@@ -142,7 +142,7 @@
             <div class="ani-tutorial-container">
                 <h2>Ano pa ang kaya kong gawin?</h2>
                 <img src="../assets/tutorial/stats-tutorial.png" style="width: 360px"/>
-                <p><b>Makikita ang mga inaasahan sa pagtanim.</b>Ito ang halimbawa ng litrato kung saan makikita ang inaasahang kita o 
+                <p><b>Makikita ang mga inaasahan sa pagtanim.</b>Ito ang halimbawa ng litrato kung saan makikita ang inaasahang kita o
                     bilang ng maani sa tinanim na prutas o gulay. Nakikita rin dito ang inaasahang araw
                     ng tagapamahala bago magsumite ang magsasaka ng report.
                 </p>
