--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -83,7 +83,7 @@
   <div id="ani-wrapper" style="margin-top:-10px" *ngIf="hasSubmittedReports()">
     <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;">
       <ion-card-content style="padding: 10px">
-        <h1 routerLink='/home' translate>submitted-reports</h1>
+        <h1 routerLink='/home' translate>home.submitted-reports</h1>
         <ion-item-divider style="margin-top: -25px; background: rgba(0,0,0,0.0);"></ion-item-divider><br>
 
         <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 20px; margin-bottom: 10px">
