Added Cebuano translation

--- a/src/app/tutorial/tutorial.page.html
+++ b/src/app/tutorial/tutorial.page.html
@@ -10,7 +10,7 @@
                     (ionChange)="handleChange($event)"
                   >
                     <ion-select-option value="fil">Tagalog</ion-select-option>
-                    <ion-select-option value="jp">Cebuano</ion-select-option>
+                    <ion-select-option value="ceb">Cebuano</ion-select-option>
                     <ion-select-option value="en">Ingles</ion-select-option>
                   </ion-select>
                 </ion-item>
