Make Filipino default language in tutorial

--- a/src/app/tutorial/tutorial.page.html
+++ b/src/app/tutorial/tutorial.page.html
@@ -8,8 +8,9 @@
                   <ion-select
                     placeholder="Language"
                     (ionChange)="handleChange($event)"
+                    value="fil_PH"
                   >
-                    <ion-select-option value="fil">Tagalog</ion-select-option>
+                    <ion-select-option value="fil_PH">Filipino</ion-select-option>
                     <ion-select-option value="ceb">Cebuano</ion-select-option>
                     <ion-select-option value="en">Ingles</ion-select-option>
                   </ion-select>
